pkl-core/src/test/files/LanguageSnippetTests/input/errors/shebang.pkl
foo = 1
#!/usr/bin/env pkl eval
